Update .gitignore to exclude logs; modify launch configuration for debugging; refactor dataset imports; adjust training configuration parameters; add new notebook for dataset splitting; remove obsolete notebook.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "--config-path",
                 "/data1/zhaofanghan/Advanced_ML_Coursework/configs/camouflage.yaml"
             ],
-            "justMyCode": false
+            "justMyCode": true
         }
     ]
 }
