--- a/configs/camouflage.yaml
+++ b/configs/camouflage.yaml
@@ -13,9 +13,7 @@ DATASET:
     TRAIN: train
     TEST: test
   SEED: 42
-  PORTION:
-    VAL: 0.5
-    TEST: 0.5
+  VAL_SIZE: 0.5
 
 DATALOADER:
   NUM_WORKERS: 0
@@ -41,7 +39,7 @@ SOLVER:
     TRAIN: 16
     VAL: 1
     TEST: 1
-  EPOCH: 100
+  EPOCH: 50
   ITER_MAX: 2000
   ITER_SIZE: 2
   ITER_SAVE: 500
@@ -53,6 +51,7 @@ SOLVER:
   POLY_POWER: 0.9
   WEIGHT_DECAY: 5.0e-4
   AVERAGE_LOSS: 20
+  CHECKPOINT: 10
 
 CRF:
   ITER_MAX: 10
