--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
                 "/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/configs/camouflage.yaml"
             ],
             "env": {
-                "LOCAL_RANK": "0",
+                "LOCAL_RANK": "7",
                 "WORLD_SIZE": "1",
                 "MASTER_ADDR": "localhost",
                 "MASTER_PORT": "12355",
@@ -34,6 +34,13 @@
                 "/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/configs/camouflage.yaml"
             ],
             "justMyCode": true
+        },
+        {
+            "name": "Debug - Model test",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/evaluate.py",
+            "console": "integratedTerminal"
         }
     ]
 }
