--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,7 @@
                 "/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/configs/camouflage.yaml"
             ],
             "env": {
+                "CUDA_VISIBLE_DEVICES": "7",
                 "LOCAL_RANK": "0",
                 "WORLD_SIZE": "1",
                 "MASTER_ADDR": "localhost",
@@ -28,8 +29,8 @@
             "module": "torch.distributed.launch",
             "args": [
                 "--nproc_per_node",
-                "4",
-                "/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/train_test.py",
+                "6",
+                "/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/train.py",
                 "--config-path",
                 "/data/sinopec/xjtu/zfh/Advanced_ML_Coursework/configs/camouflage.yaml"
             ],
