--- a/configs/crf_iter.yaml
+++ b/configs/crf_iter.yaml
@@ -8,7 +8,9 @@ parameters:
 
 command:
   - ${env}
-  - ${interpreter}
+  - torchrun
+  - --nproc_per_node
+  - 6
   - ${program}
   - --config
   - /data/sinopec/xjtu/zfh/Advanced_ML_Coursework/configs/camouflage.yaml
@@ -16,3 +18,4 @@ command:
   - CAMO+COD10K
   - --model
   - DLabCRF
+  - --distributed
