Update configuration files to adjust iteration parameters and enhance command arguments

--- a/configs/exp.yaml
+++ b/configs/exp.yaml
@@ -5,7 +5,7 @@ parameters:
   dataset:
     values: ["CAMO", "COD10K"]
   model:
-    values: ["Deeplab", "DLabCRF"]
+    values: ["DeepLab", "DLabCRF"]
 
 
 command:
