--- a/configs/crf_iter.yaml
+++ b/configs/crf_iter.yaml
@@ -2,7 +2,7 @@ program: /data/sinopec/xjtu/zfh/Advanced_ML_Coursework/evaluate.py
 project: Camouflaged_Object_Analysis_Test
 method: grid
 parameters:
-  ITER: 
+  ITER_MAX: 
     values: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
 
@@ -19,3 +19,4 @@ command:
   - --model
   - DLabCRF
   - --distributed
+  - ${args}
